--- a/public/custom-pdf.css
+++ b/public/custom-pdf.css
@@ -38,3 +38,6 @@ hr {
     border: 1px solid #000; /* Adjust the color and thickness as needed */
     margin: 20px 0; /* Adjust the margin as needed */
 }
+.capitalize{
+    text-transform: capitalize;
+}
